@@ -1,3 +1,10 @@
+<%
+  if ENV['BEAKER_HYPERVISOR']
+    hypervisor = ENV['BEAKER_HYPERVISOR']
+  else
+    hypervisor = 'vagrant'
+  end
+-%>
 HOSTS:
   oel6:
     roles:
@@ -5,7 +12,7 @@ HOSTS:
       - master
       - client
     platform:   el-6-x86_64
-    box:        elastic/oel-6-x86_64
+    box:        onyxpoint/oel-6-x86_64
     hypervisor: vagrant
     yum_repos:
       epel:
@@ -16,7 +23,7 @@ HOSTS:
     roles:
       - client
     platform:   el-7-x86_64
-    box:        elastic/oel-7-x86_64
+    box:        onyxpoint/oel-7-x86_64
     hypervisor: vagrant
     yum_repos:
       epel:
@@ -26,3 +33,6 @@ HOSTS:
 CONFIG:
   log_level: verbose
   type: aio
+<% if ENV['BEAKER_PUPPET_COLLECTION'] -%>
+  puppet_collection: <%= ENV['BEAKER_PUPPET_COLLECTION'] %>
+<% end -%>
